# libdetran

src/: .gitignore  CMakeLists.txt
src/callow/matrix/: MatrixDense.i.hh
src/material/: CMakeLists.txt  dummy_material.cc  dummy_material.hh
src/material/test/: CMakeLists.txt  test_Material.cc  test_dummy_material.cc
src/solvers/rom/: CMakeLists.txt  DEIM.cc  DEIM.hh  OperatorProjection.cc  ParametricRom.cc  ParametricRom.hh  ROMBasis.cc  ROMSolver.cc  TransientSolver.cc  TransientSolver.hh  offline_stage.cc  offline_stage.hh
src/solvers/test/: 1D_transient_fixture.hh  1d_transient_flux_basis_r=15  1d_transient_precursors_basis_r=15  CMakeLists.txt  c5g7_material.hh  c5g7_pins.hh  projection_fixture.hh  random_basis  test_DEIM.cc  test_IAEA2D.cc  test_LRA.cc  test_ROMSolver.cc  test_SlabReactor.cc  test_TWIGL.cc  test_TransientROMSolver.cc  test_c5g7.cc  test_eigen_operators.cc
src/solvers/test/rom_basis/: 1d_transient_flux_basis_r=10  1d_transient_flux_basis_r=13  1d_transient_flux_basis_r=3  1d_transient_flux_basis_r=6  1d_transient_flux_basis_r=7  1d_transient_precursors_basis_r=10  1d_transient_precursors_basis_r=13  1d_transient_precursors_basis_r=3  1d_transient_precursors_basis_r=6  1d_transient_precursors_basis_r=7  LRA_cross_section_basis  LRA_deim_basis  lra_flux_fom_basis_50  lra_precursors_basis_30  lra_temperature_basis  twigl_ramp_flux_basis_r=15  twigl_ramp_precursors_basis_r=15
src/solvers/time/: LRA.cc  LRA.hh  TimeStepper.cc  TimeStepper.hh
src/utilities/: Profiler.hh
